<resources>
    <string name="app_name">Reminder</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="someday">Someday</string>
    <string name="throwmenu">ThrowMenu</string>
    <string name="title_activity_my_calendar">MyCalendarAct</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="tasks">tasks</string>
    <string name="save">SAVE</string>
    <string name="event_title">EVENT TITLE</string>
    <string name="untitled_event">Untitled Event</string>
    <string name="add_another_alarm">Add another Alarm</string>
    <string name="alarm">ALARM</string>
    <string name="mon_9_dec_2019">Mon, 9 Dec 2019</string>
    <string name="never">Never</string>
    <string name="notes">NOTES</string>
    <string name="all_day_event">ALL DAY EVENT</string>
    <string name="tap_to_add_notes">Tap to add notes</string>
    <string name="repeat">REPEAT</string>
    <string name="cancel">cancel</string>
    <string name="copy_rights_reserved_by_sky_rider_apps">Copy Rights Reserved by Sky Rider Apps</string>
    <string name="This_will_override_your_repeat_reminder">This will override your repeat reminder</string>
    <string name="This_will_override_your_onetime_reminder">This will override your oneTime reminder</string>
    <string name="set_a_notification_sound">set a notification sound</string>
    <string name="press_to_record">Press to Record</string>
    <string name="one_payment_to_remove_ads_forever">one payment to remove ads forever</string>
    <string name="go_to_playstore">Go to Playstore</string>
    <string name="splash_lower_text">organize your life with ease</string>
    <string name="splash_app_name_text">TO DO LIST</string>
    <string name="i_want_to">I want to...</string>
    <string name="delete_this_item">DELETE THIS ITEM?</string>
    <string name="permissiontexts">This application (Toto List) asks user to allow certain permissions that are required for the application to perform its actions properly. (Todo List) helps the user to remind task that may contain user personal data.We insure you that the user personal data or information is not collected by the company nor does the application host users data </string>
    <string name="by_accepting">By accepting you are agree to our <u><b>Terms and\n Condistions</b></u> </string>
    <string name="permissionsexplanation">\t\n1. Calendar permission is required to show events of calendar.\n\n2. Camera permission is required to capture photos/videos.\n\n3. Audio permission is required to record audio.\n\n4. Storage permission is required to save user data/information on device storage.\n  </string>
    <string name="exit_dialog">Do you want to exit ?</string>
    <string name="exit_text">Do you want to exit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
